--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "express": "^4.18.4",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7",
-    "sharp": "^0.34.3"
+    "path": "^0.12.7"
   }
 }
