--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^1.11.0",
     "express": "^4.18.4",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7",
-    "qs": "^6.12.1"
+    "path": "^0.12.7"
   }
 }
